More nits